fixed home page elements overlaping

--- a/src/components/Home/style.module.scss
+++ b/src/components/Home/style.module.scss
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin: 160px 0;
+    margin: 200px 0;
 
     .container {
         width: 988px;
